# fixinspector

./: .editorconfig  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
fixinspector/: __init__.py  __main__.py  cli.py  gui.py  indexing.py
fixinspector/assets/: __init__.py
fixinspector/core/: __init__.py  dictionary.py  formatting.py  models.py  parser.py
scripts/: generate_icon.py
tests/: conftest.py  test_cli.py  test_dictionary.py  test_gui.py  test_indexing.py  test_main.py  test_parser.py
