[project]
name = "fixinspector"
version = "0.1.0"
description = "FIX message parser and viewer"
authors = [{ name = "Nelson Chan" }]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
fixinspect = "fixinspector.cli:main"

[project.gui-scripts]
fixinspector = "fixinspector.gui:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
