[project]
name = "fixinspector"
version = "0.1.0"
description = "FIX message parser and viewer"
authors = [{ name = "Nelson Chan" }]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fixinspector"]

[tool.hatch.build.targets.wheel.force-include]
"fixinspector/assets/app-icon.svg" = "fixinspector/assets/app-icon.svg"
"fixinspector/assets/app-icon.png" = "fixinspector/assets/app-icon.png"

[project.scripts]
fixinspect = "fixinspector.cli:main"

[project.gui-scripts]
fixinspector = "fixinspector.gui:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
