[project]
name = "fixinspector"
version = "0.1.0"
description = "FIX message parser and viewer"
authors = [{ name = "Nelson Chan" }]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
keywords = ["fix", "financial-information-exchange", "parser", "viewer", "qt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "pyside6>=6.11.1",
]

[project.urls]
Homepage = "https://github.com/khchanel/fixinspector"
Repository = "https://github.com/khchanel/fixinspector"
Issues = "https://github.com/khchanel/fixinspector/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fixinspector"]

[tool.hatch.build.targets.wheel.force-include]
"fixinspector/assets/app-icon.svg" = "fixinspector/assets/app-icon.svg"
"fixinspector/assets/app-icon.png" = "fixinspector/assets/app-icon.png"

[project.scripts]
fixinspect = "fixinspector.cli:main"

[project.gui-scripts]
fixinspector = "fixinspector.gui:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
